# l10n-brazil

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt  test-requirements.txt
.github/workflows/: test.yml
l10n_br_account/: README.rst  __manifest__.py
l10n_br_account/i18n/: l10n_br_account.pot
l10n_br_account/models/: account_move.py  account_move_line.py  document.py  document_line.py
l10n_br_account/readme/: DESCRIPTION.md
l10n_br_account/tests/: test_move_edition.py
l10n_br_account/views/: account_move_view.xml
l10n_br_account/wizards/: document_import_wizard.py  document_import_wizard.xml
l10n_br_account_due_list/: README.rst  __manifest__.py
l10n_br_account_due_list/tests/: test_payments.py
l10n_br_account_nfe/: README.rst  __manifest__.py
l10n_br_account_payment_brcobranca/: README.rst  __manifest__.py
l10n_br_account_payment_order/: README.rst  __manifest__.py
l10n_br_account_payment_order/data/: boleto_data.xml  cnab_data.xml  l10n_br_payment_export_type.xml
l10n_br_account_payment_order/demo/: account_account.xml  account_invoice.xml  account_journal.xml  (+5 more)
l10n_br_account_withholding/: README.rst  __manifest__.py
l10n_br_base/: README.rst  __manifest__.py
l10n_br_base_l10n_br_compat/: README.rst  __manifest__.py
l10n_br_cnab_structure/: README.rst  __manifest__.py
l10n_br_cnpj_search/: README.rst  __manifest__.py
l10n_br_coa/: README.rst  __manifest__.py
l10n_br_coa_generic/: README.rst  __init__.py  __manifest__.py  hooks.py
l10n_br_contract/: README.rst  __manifest__.py
l10n_br_crm/: README.rst  __manifest__.py
l10n_br_crm_cnpj_search/: README.rst  __manifest__.py
l10n_br_cte/: README.rst  __manifest__.py
l10n_br_cte_spec/: README.rst  __manifest__.py
l10n_br_currency_rate_update/: README.rst  __manifest__.py
l10n_br_fiscal/: README.rst  __manifest__.py
l10n_br_fiscal_certificate/: README.rst  __manifest__.py
l10n_br_fiscal_closing/: README.rst  __manifest__.py
l10n_br_fiscal_dfe/: README.rst  __manifest__.py
l10n_br_fiscal_edi/: README.rst  __manifest__.py
l10n_br_fiscal_notification/: README.rst  __manifest__.py
l10n_br_fiscal_subsequent_document/: __manifest__.py
l10n_br_hr/: README.rst  __manifest__.py
l10n_br_hr_contract/: README.rst  __manifest__.py
l10n_br_hr_expense_invoice/: README.rst
l10n_br_ie_search/: README.rst  __manifest__.py
l10n_br_mdfe/: __manifest__.py
l10n_br_mdfe_spec/: README.rst  __manifest__.py
l10n_br_mis_report/: README.rst  __manifest__.py
l10n_br_nfe/: README.rst  __manifest__.py  hooks.py
l10n_br_nfe_spec/: README.rst  __manifest__.py
l10n_br_nfse/: README.rst  __manifest__.py
l10n_br_nfse_focus/: README.rst  __manifest__.py
l10n_br_purchase/: README.rst  __manifest__.py
l10n_br_purchase_requisition/: README.rst
l10n_br_resource/: README.rst  __manifest__.py
l10n_br_sale/: README.rst  __manifest__.py
l10n_br_sale_blanket_order/: README.rst
l10n_br_sale_commission/: README.rst
l10n_br_sped_base/: README.rst  __manifest__.py
l10n_br_sped_ecd/: __manifest__.py
l10n_br_stock/: README.rst  __manifest__.py  hooks.py
l10n_br_zip/: __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
spec_driven_model/: README.rst  __manifest__.py
(+401 files in other folders)
