[project]
name = "odoo-addons-oca-l10n-brazil"
version = "18.0.20250910.1"
dependencies = [
    "odoo-addon-l10n_br_account_due_list==18.0.*",
    "odoo-addon-l10n_br_base==18.0.*",
    "odoo-addon-l10n_br_cte_spec==18.0.*",
    "odoo-addon-l10n_br_fiscal==18.0.*",
    "odoo-addon-l10n_br_fiscal_certificate==18.0.*",
    "odoo-addon-l10n_br_fiscal_edi==18.0.*",
    "odoo-addon-l10n_br_mdfe_spec==18.0.*",
    "odoo-addon-l10n_br_nfe_spec==18.0.*",
    "odoo-addon-l10n_br_zip==18.0.*",
    "odoo-addon-spec_driven_model==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
