[project]
name = "odoo-addons-oca-l10n-brazil"
version = "18.0.20260427.0"
dependencies = [
    "odoo-addon-l10n_br_account_due_list==18.0.*",
    "odoo-addon-l10n_br_account_payment_order==18.0.*",
    "odoo-addon-l10n_br_base==18.0.*",
    "odoo-addon-l10n_br_base_l10n_br_compat==18.0.*",
    "odoo-addon-l10n_br_cnpj_search==18.0.*",
    "odoo-addon-l10n_br_coa==18.0.*",
    "odoo-addon-l10n_br_coa_generic==18.0.*",
    "odoo-addon-l10n_br_crm==18.0.*",
    "odoo-addon-l10n_br_crm_cnpj_search==18.0.*",
    "odoo-addon-l10n_br_cte_spec==18.0.*",
    "odoo-addon-l10n_br_currency_rate_update==18.0.*",
    "odoo-addon-l10n_br_fiscal==18.0.*",
    "odoo-addon-l10n_br_fiscal_certificate==18.0.*",
    "odoo-addon-l10n_br_fiscal_closing==18.0.*",
    "odoo-addon-l10n_br_fiscal_dfe==18.0.*",
    "odoo-addon-l10n_br_fiscal_edi==18.0.*",
    "odoo-addon-l10n_br_fiscal_notification==18.0.*",
    "odoo-addon-l10n_br_hr==18.0.*",
    "odoo-addon-l10n_br_hr_contract==18.0.*",
    "odoo-addon-l10n_br_ie_search==18.0.*",
    "odoo-addon-l10n_br_mdfe_spec==18.0.*",
    "odoo-addon-l10n_br_mis_report==18.0.*",
    "odoo-addon-l10n_br_nfe==18.0.*",
    "odoo-addon-l10n_br_nfe_spec==18.0.*",
    "odoo-addon-l10n_br_nfse==18.0.*",
    "odoo-addon-l10n_br_nfse_focus==18.0.*",
    "odoo-addon-l10n_br_resource==18.0.*",
    "odoo-addon-l10n_br_sped_base==18.0.*",
    "odoo-addon-l10n_br_stock==18.0.*",
    "odoo-addon-l10n_br_zip==18.0.*",
    "odoo-addon-spec_driven_model==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
